--- a/AI4Animation/Assets/Demo/.gitignore
+++ b/AI4Animation/Assets/Demo/.gitignore
@@ -1,9 +1,8 @@
-ARKit/NN_Original_PFNN/
+NN_Original_PFNN*
+6Dai/Parameters.asset*
 ARKit/NN_Original_PFNN*
-ARKit/Parameters.asset
-SIGGRAPH_2017/Adam/NN_Adam_PFNN/
+ARKit/Parameters.asset*
 SIGGRAPH_2017/Adam/NN_Adam_PFNN*
-SIGGRAPH_2017/Adam/Parameters.asset
-SIGGRAPH_2017/Original/NN_Original_PFNN/
+SIGGRAPH_2017/Adam/Parameters.asset*
 SIGGRAPH_2017/Original/NN_Original_PFNN*
-SIGGRAPH_2017/Original/Parameters.asset
+SIGGRAPH_2017/Original/Parameters.asset*
